Modificación del gulp build

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class = "contenedor contenedor-boletos"></div>
     </section>
     <footer class="site-footer">
-        <p>Roc & EDM Festival. Todos los derechos reservados</p>
+        <p>Rock & EDM Festival. Todos los derechos reservados</p>
         <p>Jacob Gómez Carrillo <span class="item"></span></p>
     </footer>
     <script src="build/js/app.js"></script>
